--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
     "dotenv": "^16.4.7",
-    "ethereum-waffle": "^4.0.10"
+    "ethereum-waffle": "^4.0.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
