--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -11,13 +11,14 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.9",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "ethers": "^6.13.5",
     "hardhat": "^2.22.18"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0",
+    "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.4.7",
     "ethereum-waffle": "^4.0.10",
     "ts-node": "^10.9.2",
